# csvx-app

./: .gitignore  404.html  CNAME  Cargo.toml  README.md  about.html  csvx.wasm  index.html  manifest.json  next.config.js  nuxt.config.js  package.json  sw.js  syntax.html
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
_next/static/1PN40hQs6ZJ1F0ZtlD9V3/: _buildManifest.js
_next/static/1pl5MV7wceZ2y6rMXuMhy/: _buildManifest.js
_next/static/4IwTdjdp6PwooH2c-ctZY/: _buildManifest.js
_next/static/6YRuCKIo9qPRwqKGDDfz-/: _buildManifest.js
_next/static/7OCCoBzA1kb5DMjUO9-4_/: _buildManifest.js
_next/static/7S_we58Iy0K-3fKTu2D_W/: _buildManifest.js
_next/static/BYg-q5eNYZCw41VCiIj35/: _buildManifest.js
_next/static/KkrZGsGXuQOZst7TmwX-I/: _buildManifest.js
_next/static/LFsj4N1AEqKs9eDJdW2x9/: _buildManifest.js
_next/static/cCIPIhido9aO4hG5w4j9q/: _buildManifest.js
_next/static/cUpQgb2LWjSk-pW99G4Q3/: _buildManifest.js
_next/static/chunks/: main-1d4a615742b109f0.js  main-1e8889714240cd30.js  main-2fb0863b295040d4280d.js  main-6cbac5f3663a3fe00ba9.js  main-796d11fe77b85cba4569.js  main-803c17897ff09a9b.js  main-8eddbf2ce9bdc359.js  webpack-3263150e8e0fec3305d8.js  webpack-4b822801844a9566d60b.js  webpack-78154c2375c59fe48706.js  webpack-acb5de07506783ec.js
_next/static/css/: 818e2eb3fa79c564.css
images/icons/: browserconfig.xml
layouts/: default.vue
pages/: _app.tsx  _document.tsx  about.tsx  contact.tsx  developer.tsx  index.tsx  index.vue  syntax.tsx
public/: CNAME  csvx.wasm
src/: lib.rs
(+49 files in other folders)
