[package]
name = "csvx-app"
version = "0.1.0"
authors = ["YUJI <mail@yuji.ne.jp>"]
edition = "2018"

description = "CSVX wrapper for WebAssembly"
repository = "https://github.com/yujixr/csvx-app"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = 'thin'
panic = 'abort'
codegen-units = 1

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
csvx = "0.1.14"
lazy_static = "1.4"
